--- a/views/layouts/application.html.erb
+++ b/views/layouts/application.html.erb
@@ -1,11 +1,16 @@
+<%
+  def link_to(name, url)
+      return "<a href='#{url}'>#{name}</a>"
+   end
+  %>
+
 <html>
   <body>
-    <h1>You're using a layout</h1>
+    <h1>Hello there</h1>
     <p>
-      <h3> I'm a header</h3>
-      <p>Put things in the header</p>
-      <a href='me.html'>Me</a>
-
+      <h3> Hoe are you doing today?</h3>
+      <p>Am sure you are doing good</p>
+      <%= link_to('This is a link to google', 'http://google.com') %>
     </p>
     <hr />
     <div>
