finished the final homework

--- a/views/babatunde.html.erb
+++ b/views/babatunde.html.erb
@@ -5,5 +5,6 @@
     <% ['Dentist', 'Programmer'].each do |work| %>
     <li> I am a <%= work %></li>
     <% end %>
+    <%= Time.now %>
   </ul>
 </div>
